Delete old position/transaction files, get position date from within file